# maestro-nerve

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
docs/: production-cli-research.md
plugins/maestro-nerve/.codex-plugin/: plugin.json
scripts/: harness-fast.sh
skills/maestro-nerve/: SKILL.md
skills/maestro-nerve/references/: tools.md
src/maestro_nerve/: __init__.py  __version__.py  stdio_proxy.py
src/maestro_nerve/cli/: __init__.py  access.py  login.py  serve_mcp.py  workspace.py
src/maestro_nerve/client/: __init__.py  auth.py  http.py
tests/: conftest.py  test_auth_storage.py  test_cli_access.py  test_cli_login.py  test_cli_workspace_status.py  test_http_client.py  test_manifests.py
