[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "maestro-nerve"
version = "0.1.1"
description = "Shared intelligence memory plane for AI agents — remote MCP + CLI + Claude Code / Codex plugins."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Maestro AI", email = "founder@maestro.onl" },
]
keywords = [
    "mcp",
    "memory",
    "agent-memory",
    "claude-code",
    "codex",
    "chatgpt",
    "knowledge-graph",
    "shared-memory",
    "evidence-grounded",
    "procurement",
    "compliance",
    "tender",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "platformdirs>=4.0.0",
]

[project.optional-dependencies]
mcp-stdio = [
    "mcp>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "build>=1.2.0",
    "twine>=5.0",
    "respx>=0.21.0",
]

[project.scripts]
mnerve = "maestro_nerve.cli:app"

[project.urls]
Homepage = "https://github.com/maestro-ai-stack/maestro-nerve"
Repository = "https://github.com/maestro-ai-stack/maestro-nerve"
Issues = "https://github.com/maestro-ai-stack/maestro-nerve/issues"
Documentation = "https://github.com/maestro-ai-stack/maestro-nerve#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/maestro_nerve"]

[tool.hatch.build.targets.sdist]
include = [
    "src/maestro_nerve",
    "skills/maestro-nerve",
    "docs",
    ".claude-plugin",
    ".codex-plugin",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = [
    "E501",  # line too long: leave to formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
